--- a/src/css/style.css
+++ b/src/css/style.css
@@ -52,6 +52,22 @@ a.arrow
   width: 100%
 }
 
+.no-margin {
+  margin: 0px;
+}
+
+.margin-top {
+  margin-top: 1.5em;
+}
+
+.margin-bottom {
+  margin-bottom: 1.5em;
+}
+
+.no-box-shadow {
+  box-shadow: none;
+}
+
 img.backgroundimage {
 	width: 100%;
 	margin: 0 auto;
@@ -220,5 +236,6 @@ input, textarea {
 #externalicons {
 	width: 75px;
 	margin: 0px auto;
-	position: relative;
+  position: relative;
+  margin-bottom: 1.5em;
 }
